apps/flexmaster/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flexmaster-deployment
  labels:
    app: flexmaster-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flexmaster-app
  template:
    metadata:
      labels:
        app: flexmaster-app
    spec:
      containers:
      - name: flexmaster
        image: ghulammuzz/flexmaster:456dc61
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"    
          limits:
            memory: "256Mi"
            cpu: "1"     
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: dockerkey

---
apiVersion: v1
kind: Service
metadata:
  name: flexmaster-service
  labels:
    app: flexmaster-app
spec:
  selector:
    app: flexmaster-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
